--- a/docs/index.css
+++ b/docs/index.css
@@ -5,6 +5,7 @@ body {
 }
 
 .con {
+  margin: 0 auto;
   max-width: 1180px;
 }
 
@@ -42,11 +43,52 @@ header>.sub-menu>a:nth-of-type(1) {
   margin-right: 30px;
 }
 
-.section-1 {
+.section-1>.bn-img {
+  position: relative;
+}
+
+.section-1 .txt-box {
   position: absolute;
+  top: 50%;
+  left: 18%;
+  transform: translateY(-50%);
+  color: #fff;
+  font-weight: 100;
+  font-size: 140px;
+  line-height: 204px;
+  letter-spacing: -0.075em;
+  width: 540px;
+  height: 540px;
+}
+
+.section-1 .txt-box span {
+  position: absolute;
+}
+
+.section-1 .txt-box span:nth-of-type(1) {
   top: 0;
+  left: 4px;
+}
+
+.section-1 .txt-box span:nth-of-type(2) {
+  line-height: 204px;
+  letter-spacing: -0.058em;
+  top: 110px;
   left: 0;
 }
 
+.section-1 .txt-box>.sub-txt {
+  position: absolute;
+  left: 17px;
+  top: 320px;
+  width: 100%;
+  font-size: 13px;
+  line-height: 149%;
+  letter-spacing: -0.075em;
+}
 
-
+.section-1 .txt-box>.more-btn {
+  position: absolute;
+  left: 4px;
+  top: 430px;
+}
