제품 정보 슬라이더 작업중

--- a/docs/index.css
+++ b/docs/index.css
@@ -43,6 +43,10 @@ header>.sub-menu>a:nth-of-type(1) {
   margin-right: 30px;
 }
 
+.section-1 {
+  overflow-x: hidden;
+}
+
 .section-1>.bn-img {
   position: relative;
 }
@@ -91,4 +95,41 @@ header>.sub-menu>a:nth-of-type(1) {
   position: absolute;
   left: 4px;
   top: 430px;
+}
+
+.section-2>.con>.title-txt>h1 {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+}
+
+.section-2>.con>.title-txt>a {
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+  text-decoration-line: underline;
+  color: #A7A7A7;
+  margin-left: 20px;
+}
+
+.section-2>.con>.title-txt>a>img {
+  display: inline-block;
+  margin-left: 3px;
+}
+
+.section-2>.con>.title-txt>span {
+  display: block;
+  font-weight: 100;
+  font-size: 15px;
+  line-height: 23px;
+  letter-spacing: 0.300em;
+  margin-top: 3px;
+}
+
+.swiper {
+  width: 1100px;
+  height: 300px;
 }
