--- a/docs/index.css
+++ b/docs/index.css
@@ -97,6 +97,14 @@ header>.sub-menu>a:nth-of-type(1) {
   top: 430px;
 }
 
+.txtRight {
+  text-align:right;
+}
+
+.section-2 {
+  margin-top: 100px;
+}
+
 .section-2>.con>.title-txt>h1 {
   display: inline-block;
   font-weight: 500;
@@ -129,7 +137,599 @@ header>.sub-menu>a:nth-of-type(1) {
   margin-top: 3px;
 }
 
-.swiper {
-  width: 1100px;
+.prod-slide {
+  width: 1180px;
+  height: 430px;
+  overflow: hidden;
+  margin: 0 auto;
+  margin-top:34px;
+}
+
+.prod-slide .swiper-slide {
+  position: relative;
+
+  width: 265px;
+}
+
+.prod-slide>.swiper-wrapper>.swiper-slide>.img-box {
+  width: 98%;
+  height: 340px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.prod-slide>.swiper-wrapper>.swiper-slide>.img-box>img {
+  display: inline-block;
+  box-sizing: border-box;
+  margin: 0 auto;
+}
+
+.prod-slide>.swiper-wrapper>.swiper-slide>.img-box>.marginTop {
+  margin-top: 12px;
+}
+
+.prod-slide>.swiper-wrapper>.swiper-slide>.txt-box {
+  display: block;
+  position: relative;
+  z-index:1;
+  width: 98%;
+  height: 90px;
+  background-color: #fff;
+  border-radius: 8px 8px 0 0;
+  box-shadow: 0px -25px 16.6667px rgba(129, 129, 129, 0.15);
+  margin: 0 auto;
+}
+
+.prod-slide>.swiper-wrapper>.swiper-slide>.txt-box>h1 {
+  font-weight: 300;
+  font-size: 11px;
+  line-height: 18px;
+  letter-spacing: -0.095em;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+.prod-slide>.swiper-wrapper>.swiper-slide>.txt-box>span {
+  font-size: 16.6667px;
+  line-height: 24px;
+  letter-spacing: -0.095em;
+  padding-left: 10px;
+}
+
+.prod-list .con {
+  position: relative;
+}
+
+.prod-list .con .btn {
+  position: absolute;
+}
+
+.prod-list .con .btn-prev {
+  left: -30px;
+  top: 274px;
+}
+
+.prod-list .con .btn-next {
+  right: -30px;
+  top: 274px;
+}
+
+.prod-list .con .btn.swiper-button-disabled {
+  opacity: 0.4;
+}
+
+.sub-prod-list {
+  margin-top: 20px;
+}
+
+.sub-prod-list>.box {
+  width: 267px;
+  height: 55px;
+  border: 0.7px solid #959595;
+  box-sizing: border-box;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
+  padding-left: 20px;
+}
+
+.sub-prod-list img {
+  padding-right: 20px;
+}
+
+.section-3 {
+  position: relative;
+  margin-top: 190px;
+}
+
+.section-3 > img.rec_bg {
+  width:100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.section-3>.con {
+  padding-top: 70px;
+}
+
+.section-3>.con>.title-txt>h1 {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+}
+
+.section-3>.con>.title-txt>a {
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+  text-decoration-line: underline;
+  color: #A7A7A7;
+  margin-left: 20px;
+}
+
+.section-3>.con>.title-txt>a>img {
+  display: inline-block;
+  margin-left: 3px;
+}
+
+.section-3>.con>.title-txt>span {
+  display: block;
+  font-weight: 100;
+  font-size: 15px;
+  line-height: 23px;
+  letter-spacing: 0.300em;
+  margin-top: 3px;
+}
+
+.section-3>.con>.box-wrap {
+  width: 100%;
+  margin-top: 19px;
+}
+
+.section-3>.con>.box-wrap>.list {
+  cursor: pointer;
+}
+
+.section-3>.con>.box-wrap>.list>.img-box {
+  width: 375px;
+  height: 290px;
+
+}
+
+.section-3>.con>.box-wrap>.list>.img-box>img {
+  width: 100%;
+  display: inline-block;
+    margin-top: 30px;
+}
+
+.section-3>.con>.box-wrap>.list>.txt-box {
+  position: relative;
+  z-index: 1;
+  width:375px;
+  height:159px;
+  background-color:#fff;
+  box-sizing: border-box;
+  border-radius: 8px;
+  padding: 25px;
+  box-shadow: 0px -25px 16.6667px rgba(129, 129, 129, 0.15);
+}
+
+.section-3>.con>.box-wrap>.list>.txt-box>.s1 {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+  margin-right: 10px;
+}
+
+.section-3>.con>.box-wrap>.list>.txt-box>.s2 {
+  font-family: Noto Sans KR;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+}
+
+.section-3>.con>.box-wrap>.list>.txt-box>h1 {
+  font-family: Noto Sans KR;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+  margin-top: 15px;
+  margin-bottom: 3px;
+}
+
+.section-3>.con>.box-wrap>.list>.txt-box>div {
+  font-family: Noto Sans KR;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 12px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+}
+
+.section-4 {
+  position: relative;
+  height: 543px;
+  margin-top: 75px;
+}
+
+.section-4>.con {
+  padding-top: 150px;
+}
+
+.section-4 > img.search_bg {
+  width:100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.section-4>.con>.title-txt>h1 {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+  margin-bottom: 9px;
+}
+
+.section-4>.con>.title-txt>div {
+  font-family: Noto Sans KR;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 15px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+}
+
+.section-4>.con>.search-box {
+  width: 100%;
+  height: 60px;
+  background: #FFFFFF;
+  border: 0.5px solid #363636;
+  box-sizing: border-box;
+  padding: 0 30px;
+  margin-top: 40px;
+}
+
+.section-4>.con>.search-box select {
+  background-image: url(https://i.postimg.cc/Ghy6dd4m/search-vector.png);
+  background-size: auto;
+  background-position: 80%;
+  border: none;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 122.4%;
+  text-align: center;
+  letter-spacing: -0.07em;
+  margin-right: 30px;
+}
+
+.section-4>.con>.search-box input {
+  border: none;
+  width:100%;
+  border-left: 0.5px solid #363636;
+}
+
+.section-5 {
+  margin-top: 60px;
+}
+
+.section-5>.con>.title-txt>h1 {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+}
+
+.section-5>.con>.title-txt>a {
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+  text-decoration-line: underline;
+  color: #A7A7A7;
+  margin-left: 20px;
+}
+
+.section-5>.con>.title-txt>a>img {
+  display: inline-block;
+  margin-left: 3px;
+}
+
+.section-5>.con>.title-txt>div {
+  margin-top: 9px;
+  font-family: Noto Sans KR;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 15px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+}
+
+.section-5>.con>.av-list-box {
+  margin-top: 50px;
+}
+
+.section-5>.con>.av-list-box>.list {
+  cursor: pointer;
+}
+
+.section-5>.con>.av-list-box>.list>.img-box {
+  width: 235px;
+  height: 237px;
+  box-shadow: 0px 30px 50px rgba(0, 0, 0, 0.07);
+  margin-bottom: 12px
+}
+
+.section-5>.con>.av-list-box>.list>.txt-box {
+  width: 230px;
+}
+
+.section-5>.con>.av-list-box>.list>.txt-box>h1 {
+  display:inline-block;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 122.4%;
+  text-align: center;
+  letter-spacing: -0.07em;
+}
+
+.section-5>.con>.av-list-box>.list>.txt-box>div {
+  display: inline-block;
+  background: #613E71;
+  font-size: 8px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+  color: #FFFFFF;
+  width: 38px;
+  height: 16px;
+  position: relative;
+}
+
+.section-5>.con>.av-list-box>.list>.txt-box>div::after {
+  content: "신제품";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  white-space: nowrap;
+}
+
+.section-5>.con>.av-list-box>.list>.txt-box>span {
+  display:block;
+  font-family: Noto Sans KR;
+  font-style: normal;
+  font-weight: 100;
+  font-size: 15px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+  margin-top: 3px;
+}
+
+.section-6 {
+  height: 433px;
+  background: linear-gradient(267.87deg, #F8F5FF 26.94%, #FCFFE7 100.36%);
+  margin-top: 213px;
+}
+
+.section-6>.con>.wrap>.news-wrap {
+  width: calc(1180px / 2);
+  height: 268px;
+  box-sizing: border-box;
+  margin-top: 50px;
+}
+
+.section-6>.con>.wrap>.news-wrap>.title-txt>h1 {
+  display: inline-block;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 40px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+}
+
+.section-6>.con>.wrap>.news-wrap>.title-txt>h1>span {
+  font-weight: normal;
+}
+
+.section-6>.con>.wrap>.news-wrap>.title-txt>a {
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+  text-decoration-line: underline;
+  color: #A7A7A7;
+  margin-left: 20px;
+}
+
+.section-6>.con>.wrap>.news-wrap>.title-txt>a>img {
+  display: inline-block;
+  margin-left: 3px;
+
+}
+
+.section-6>.con>.wrap>.news-wrap>.news-list {
+  height: 100%;
+  margin-top: 27px;
+  box-sizing: border-box;
+  padding: 0 30px;
+cursor: pointer;
+}
+
+.section-6>.con>.wrap>.news-wrap>.news-list>.list-wrap>.s1{
+  margin-right: 10px;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: #000;
+}
+
+.section-6>.con>.wrap>.news-wrap>.news-list>.list-wrap>.s2{
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+}
+
+.section-6>.con>.wrap>.news-wrap>.news-list>.list-wrap>.s3 {
+  font-weight: 300;
+  font-size: 10px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+}
+
+.section-6>.con>.wrap>.news-wrap>.news-list>hr{
+  /*   border: 1px dashed rgba(0, 0, 0, 0.35); */
+}
+
+.section-6>.con>.wrap>.bn-wrap {
+  width: calc(1180px / 2);
+  box-sizing: border-box;
+  position: relative;
+}
+
+.section-6>.con>.wrap>.bn-wrap>img {
+  display: block;
+  width: 100%;
+  position: absolute;
+  top: -20px;
+  left: 40px;
+  cursor: pointer;
+}
+
+
+.section-7 {
+  position: relative;
+}
+
+.section-7>.con>.service-wrap {
+  text-align: center;
+  padding-top: 70px;          
+}
+
+.section-7>.con>.service-wrap>h1 {
+  display: inline-block;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 40px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+}
+
+.section-7>.con>.service-wrap>h1>span {
+  font-weight: normal;
+}
+
+.section-7>.con>.service-wrap>.list-wrap {
+  width: 897px;
+  flex-shrink: 0;
+  margin: 0 auto;
+}
+
+.section-7>.con>.service-wrap>.list-wrap>a {
+  display: block;
+  width: 156px;
+  margin-top: 40px;
+
+}
+
+
+.section-7>.bg {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+footer {
   height: 300px;
+  background: #382A48;
+  margin-top: 85px;
+}
+
+footer>.wrap{
+  width: 1512px;
+  margin: 0 auto;
+  padding-top: 50px;
+}
+
+footer>.wrap>.list>h1 {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 122.4%;
+  letter-spacing: -0.07em;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+
+footer>.wrap>.list>.content-wrap {
+  margin-top: 12px;
+}
+
+footer>.wrap>.list>.content-wrap>.cwrap {
+  font-weight: 300;
+  font-size: 13px;
+  line-height: 135.4%;
+  letter-spacing: -0.07em;
+  color: #FFFFFF;
+}
+
+footer>.wrap>.list>.content-wrap>.wrap_1 {
+  margin-right: 23px;
+}
+
+footer .copy {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 135.4%;
+  letter-spacing: -0.07em;
+  color: #FFFFFF;
+  width: 100%;
+  margin-top: 50px;
+}
+
+footer .c {
+  width: calc(1512px / 3);
+}
+
+
+footer .c3 {
+  text-align: right;
+  cursor: pointer;
+}
+
+footer .c3 div {
+  color: #9EAA14;
+  cursor: pointer;
+}
+
+footer .c3 .wwrap {
+  color: #fff;
+  margin-top: 5px;
+}
+
+footer .c3 span {
+  margin-left: 15px;
+  cursor: pointer;
+}
+
+footer li {
+  cursor: pointer;
 }
