--- a/docs/subPage.css
+++ b/docs/subPage.css
@@ -148,6 +148,10 @@ header>.sub-menu>a:nth-of-type(1) {
   border-radius: 3px;
 }
 
+.section-3>.prod-list>.con>ul>li>a:hover {
+  border: 0.5px solid #7c53aa;
+}
+
 .section-3>.prod-list>.con>ul>li {
   margin-bottom: 100px;
 }
@@ -187,6 +191,10 @@ header>.sub-menu>a:nth-of-type(1) {
   margin: 10px 0;
 }
 
+.section-3>.prod-list>.con>ul>li>a:hover .line {
+  background-color: #7c53aa;
+}
+
 .section-3>.prod-list>.con>ul>li>a>.txt-wrap>.content-wrap>.bold {
   font-weight: normal;
   font-size: 12px;
@@ -212,6 +220,10 @@ header>.sub-menu>a:nth-of-type(1) {
   font-size: 15px;
   line-height: 22px;
   letter-spacing: -0.09em;
+}
+
+.section-3>.con>button.more:hover {
+  background-color: #e4dbfd;
 }
 
 .section-3>.con>button.more>img {
